[build-system]
requires = [
	'asgiref',
	'setuptools>=62',
	'stackholm',
]
build-backend = 'setuptools.build_meta'

[tool.autopep8]
max_line_length = 119
ignore = []
in-place = true
recursive = true
aggressive = false

[tool.isort]
atomic = true
honor_noqa = true
line_length = 79
virtual_env = '.venv'
sections = [
	'FUTURE',
	'STDLIB',
	'THIRDPARTY',
	'FIRSTPARTY',
	'LOCALFOLDER',
]
known_first_party = [
	'revy',
]
force_single_line = false
single_line_exclusions = []
force_sort_within_sections = true
case_sensitive = true
lexicographical = true
order_by_type = false
group_by_package = true
from_first = false
combine_as_imports = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 1
ensure_newline_before_comments = true
color_output = true
skip=[]
